--- a/project/styles/_common_styles.scss
+++ b/project/styles/_common_styles.scss
@@ -3,6 +3,19 @@ body {
     margin: 0 auto;
 }
 
+li {
+    list-style: none;
+}
+
+textarea {
+    resize: none;
+}
+
+input,
+textarea {
+    outline: none;
+}
+
 .root {
     min-height: 100vh;
     display: flex;
