--- a/project/styles/_goods_list.scss
+++ b/project/styles/_goods_list.scss
@@ -26,6 +26,11 @@
         padding-bottom: 10px;
         border-radius: 10px 10px 0 0;
         width: 100%;
+        height: 300px;
+    }
+
+    &__price {
+        margin-bottom: 10px;
     }
 
     &__text {
