--- a/project/styles/_catalog.scss
+++ b/project/styles/_catalog.scss
@@ -1,3 +1,26 @@
 .catalog__wrapper {
     padding: 20px 0;
 }
+
+.catalog_search {
+    &__container {
+        width: 100%;
+        display: flex;
+        margin-bottom: 20px;
+    }
+
+    &__title {
+        margin-right: 5px;
+    }
+
+    &__input {
+        border: 1px solid $primaryColor;
+        flex-grow: 1;
+    }
+
+    &__button {
+        padding: 0 15px;
+        background-color: $primaryColor;
+        color: white;
+    }
+}
