--- a/project/styles/_checkout.scss
+++ b/project/styles/_checkout.scss
@@ -20,10 +20,10 @@
 .goods__item {
     padding-left: 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding-bottom: 20px;
+    padding: 20px 0;
     border-bottom: 1px solid black;
-    margin-bottom: 20px;
 
     &:last-child {
         margin-bottom: 0;
@@ -31,8 +31,26 @@
         padding-bottom: 0;
     }
 
+    &_information {
+        display: flex;
+    }
+
     &_description {
         padding-left: 20px;
+    }
+
+    &_buttons {
+        display: flex;
+        flex-direction: column;
+        padding-right: 20px;
+    }
+
+    &_button {
+        width: 30px;
+        height: 30px;
+        border: 1px solid black;
+        border-radius: 50px;
+        margin: 5px 0;
     }
 }
 
