--- a/project/styles/_header.scss
+++ b/project/styles/_header.scss
@@ -36,18 +36,23 @@
 }
 
 .basket {
+    min-height: 50vh;
+    max-height: 300px;
+    overflow-y: auto;
     padding: 10px;
     border: 1px solid $primaryColor;
     border-radius: 10px;
-    opacity: 0;
     right: 0;
     top: 68px;
     position: absolute;
     background-color: $primaryColor;
     color: $secondaryColor;
+    transform: translateY(-150%);
+    transition-duration: 0.2s;
 
     &_active {
-        opacity: 100%;
+        transform: translateY(0);
+        transition-duration: 0.2s;
     }
 
     &__message {
