--- a/project/styles/styles.css
+++ b/project/styles/styles.css
@@ -17,11 +17,6 @@ a {
   text-decoration: none;
 }
 
-body {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
 li {
   list-style: none;
 }
@@ -60,7 +55,7 @@ textarea {
 .to_top_button {
   padding: 10px;
   position: fixed;
-  bottom: 20px;
+  bottom: 40px;
   right: 20px;
   opacity: 0;
   border-radius: 10px;
@@ -120,19 +115,28 @@ textarea {
 }
 
 .basket {
+  min-height: 50vh;
+  max-height: 300px;
+  overflow-y: auto;
   padding: 10px;
   border: 1px solid #3c27ac;
   border-radius: 10px;
-  opacity: 0;
   right: 0;
   top: 68px;
   position: absolute;
   background-color: #3c27ac;
   color: white;
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .basket_active {
-  opacity: 100%;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .basket__message {
@@ -188,6 +192,31 @@ textarea {
   padding: 20px 0;
 }
 
+.catalog_search__container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.catalog_search__title {
+  margin-right: 5px;
+}
+
+.catalog_search__input {
+  border: 1px solid #3c27ac;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.catalog_search__button {
+  padding: 0 15px;
+  background-color: #3c27ac;
+  color: white;
+}
+
 .checkout_basket {
   padding: 20px 0;
 }
@@ -217,12 +246,14 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-bottom: 20px;
+  padding: 20px 0;
   border-bottom: 1px solid black;
-  margin-bottom: 20px;
 }
 
 .goods__item:last-child {
@@ -231,8 +262,33 @@ textarea {
   padding-bottom: 0;
 }
 
+.goods__item_information {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .goods__item_description {
   padding-left: 20px;
+}
+
+.goods__item_buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-right: 20px;
+}
+
+.goods__item_button {
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 50px;
+  margin: 5px 0;
 }
 
 .basket_description {
@@ -285,6 +341,11 @@ textarea {
   padding-bottom: 10px;
   border-radius: 10px 10px 0 0;
   width: 100%;
+  height: 300px;
+}
+
+.goods_item__price {
+  margin-bottom: 10px;
 }
 
 .goods_item__text {
