--- a/project/styles/_checkout.scss
+++ b/project/styles/_checkout.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.checkout__empty_basket_heading {
+    margin-bottom: 20px;
+}
+
 .goods {
     flex-basis: 50%;
     border-right: 1px solid black;
