--- a/project/styles/_goods_list.scss
+++ b/project/styles/_goods_list.scss
@@ -29,6 +29,10 @@
         height: 300px;
     }
 
+    &__category {
+        margin-bottom: 10px;
+    }
+
     &__price {
         margin-bottom: 10px;
     }
