--- a/project/styles/_catalog.scss
+++ b/project/styles/_catalog.scss
@@ -4,6 +4,7 @@
 
 .catalog_search {
     &__container {
+        padding: 0 10px;
         width: 100%;
         display: flex;
         margin-bottom: 20px;
